<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp">



    <EditText
        android:id="@+id/LoginRegister_EditText_Username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/LoginRegister_EditText_Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/LoginRegister_Button_Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login" />

    <TextView
        android:id="@+id/LoginRegister_TextView_DoNotHaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/newUser" />

    <ProgressBar
        android:id="@+id/LoginRegister_ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:visibility="invisible" />

</LinearLayout>